--- a/webservice/templates/campaign_sheet.html
+++ b/webservice/templates/campaign_sheet.html
@@ -1,22 +1,8 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>POMS</title>
+POMS
 {%endblock%}
-
-
-{%block breadcrumbs%}
-<div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="{{pomspath}}/" class="section">Home</a>
-  <div class="divider"> / </div>
-  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Stage</a>
-  <div class="divider"> / </div>
-  <a href="{{pomspath}}/campaign_info?campaign_id={{campaign_id}}" class="section">{{name}}</a>
-  <div class="divider"> / </div>
-  <div class="section">Campaign Stage Sheet</div>
-</div>
-{%endblock%}
-
 
 {%block header%}
 <h1 class="ui header">
