--- a/webservice/templates/campaign_time_bars.html
+++ b/webservice/templates/campaign_time_bars.html
@@ -1,20 +1,8 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>POMS:Campaign {{name}}</title>
+POMS:Campaign {{name}}
 {%endblock%}
-
-
-{%block breadcrumbs%}
-<div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="{{pomspath}}/" class="section">Home</a>
-  <div class="divider"> / </div>
-  <div class="section"><a href="{{pomspath}}/show_campaigns">Campaign Stages</a></div>
-  <div class="divider"> / </div>
-  <div class="section">{{name}}</div>
-</div>
-{%endblock%}
-
 
 {%block header%}
 <h1 class="ui header">
