--- a/webservice/templates/elasticsearch.html
+++ b/webservice/templates/elasticsearch.html
@@ -1,22 +1,8 @@
 {%extends "layout.html" %}
 
 {%block title%}
-    <title>POMS Service Downtimes</title>
+POMS Service Downtimes
 {%endblock%}
-
-{%block breadcrumbs%}
-    <div class="item">
-       Dashboard  <!--label of current location on mobile-->
-    </div>
-    <div class="item">
-      Elasticsearch Table Demo <!--label of current location on mobile-->
-    </div>
-{%endblock%}
-
-
-
-
-
 
 {%block header%}
 <h1 class="ui header">
