--- a/webservice/templates/kill_jobs_confirm.html
+++ b/webservice/templates/kill_jobs_confirm.html
@@ -1,22 +1,11 @@
 {%extends "layout.html" %}
 
 {%block title%}
-    <title>Confirm Kill Jobs</title>
-{%endblock%}
-
-{%block breadcrumbs%}
-    <div class="item">
-       Dashboard  <!--label of current location on mobile-->
-    </div>
-    <div class="item">
-      Kill jobs result<!--label of current location on mobile-->
-    </div>
+Confirm Kill Jobs
 {%endblock%}
 
 {%block header%}
-<h1 class="ui header">
-         Confirm request {%include 'help_button.html'%}
-</h1>
+Confirm request {%include 'help_button.html'%}
 {%endblock%}
 
 
@@ -31,7 +20,7 @@
 
 <div class="ui raised padded text container segment">
 
-   Are you sure you want to kill the jobs for 
+   Are you sure you want to kill the jobs for
      {% if campaign_id is not none %}
         Campaign Stage {{c.name if c}}, Submission(s) {{jjil|join(', ')}}
      {% elif task_id is not none %}
@@ -43,11 +32,11 @@
 
    <button class="ui button">
      {% if campaign_id is not none %}
-       <a href="{{pomspath}}/kill_jobs?confirm=y&campaign_id={{campaign_id}}">Yes, Kill Them</a>  
+       <a href="{{pomspath}}/kill_jobs?confirm=y&campaign_id={{campaign_id}}">Yes, Kill Them</a>
      {% elif task_id is not none %}
-       <a href="{{pomspath}}/kill_jobs?confirm=y&task_id={{task_id}}">Yes, Kill Them</a>  
+       <a href="{{pomspath}}/kill_jobs?confirm=y&task_id={{task_id}}">Yes, Kill Them</a>
      {% elif job_id is not none %}
-       <a href="{{pomspath}}/kill_jobs?confirm=y&job_id={{job_id}}">Yes, Kill Them</a>  
+       <a href="{{pomspath}}/kill_jobs?confirm=y&job_id={{job_id}}">Yes, Kill Them</a>
      {% endif %}
    </button>
 
@@ -56,5 +45,5 @@
    </button>
 
 </div>
-	
+
 {%endblock%}
