--- a/webservice/templates/service_downtimes.html
+++ b/webservice/templates/service_downtimes.html
@@ -1,27 +1,14 @@
 {%extends "layout.html" %}
 
 {%block title%}
-    <title>POMS Service Downtimes</title>
+POMS Service Downtimes
 {%endblock%}
-
-{%block breadcrumbs%}
-    <div class="item">
-       Dashboard  <!--label of current location on mobile-->
-    </div>
-    <div class="item">
-      Service Downtimes <!--label of current location on mobile-->
-    </div>
-{%endblock%}
-
-
-
-
 
 
 {%block header%}
 <h1 class="ui header">
          Service Downtimes {%include 'help_button.html'%}
-                    
+
           <div class="sub header">
               view and sort all downtimes
           </div>
@@ -69,5 +56,5 @@
 </table>
 
 
-	
+
 {%endblock%}
