--- a/webservice/templates/show_dimension_files.html
+++ b/webservice/templates/show_dimension_files.html
@@ -1,16 +1,7 @@
 {%extends "layout.html" %}
 
 {%block title%}
-    <title>Files for dimension...</title>
-{%endblock%}
-
-{%block breadcrumbs%}
-    <div class="item">
-       Dashboard  <!--label of current location on mobile-->
-    </div>
-    <div class="item">
-      Dimension File list<!--label of current location on mobile-->
-    </div>
+Files for dimension...
 {%endblock%}
 
 {%block header%}
@@ -39,5 +30,5 @@ Count: {{flist|length}}
 </div>
 {%endfor%}
 </div>
-	
+
 {%endblock%}
