--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -1,31 +1,21 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>POMS</title>
-
-    <style type="text/css">
-    div.scrollable {
-        width: 100%;
-        overflow-x: scroll;
-    }
-    div.scrollable table {
-        width: 300%;
-    }
-    </style>
+POMS
 {%endblock%}
 
-{%block breadcrumbs%}
-<div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="{{pomspath}}/" class="section">Home</a>
-  <div class="divider"> / </div>
-  <div class="section">Job Types</div>
-</div>
-{%endblock%}
+<style type="text/css">
+  div.scrollable {
+  width: 100%;
+  overflow-x: scroll;
+  }
+  div.scrollable table {
+  width: 300%;
+  }
+</style>
 
 {%block header%}
-<h1 class="ui header">
-    Job Types {%include 'help_button.html'%}
-</h1>
+Job Types {%include 'help_button.html'%}
 {%endblock%}
 
 {%block subheader%}
