--- a/webservice/templates/campaign_deps.html
+++ b/webservice/templates/campaign_deps.html
@@ -1,23 +1,13 @@
 {%extends "layout.html" %}
 
 {%block title%}
-    <title>POMS Campaign Dependencies</title>
+POMS Campaign Dependencies
 {%endblock%}
-
-{%block breadcrumbs%}
-<div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="{{pomspath}}/" class="section">Home</a>
-  <div class="divider"> / </div>
-  <div class="section">Campaign Dependencies</div>
-</div>
-
-{%endblock%}
-
 
 {%block header%}
 <h1 class="ui header">
           Campaign Dependencies for Tag {{tag}}
-                    
+
           <div class="sub header">
               see dependencies
           </div>
