--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -1,18 +1,7 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>POMS:Campaign {{Campaign_info.Campaign.name}}</title>
-{%endblock%}
-
-
-{%block breadcrumbs%}
-<div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="{{pomspath}}/" class="section">Home</a>
-  <div class="divider"> / </div>
-  <div class="section"> <a href="{{pomspath}}/show_campaigns">Campaigns</a></div>
-  <div class="divider"> / </div>
-  <div class="section">{{Campaign_info.Campaign.name}}</div>
-</div>
+POMS:Campaign {{Campaign_info.Campaign.name}}
 {%endblock%}
 
 
