--- a/webservice/templates/error_response.html
+++ b/webservice/templates/error_response.html
@@ -1,15 +1,7 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>POMS</title>
-{%endblock%}
-
-{%block breadcrumbs%}
-<div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="{{pomspath}}/" class="section">Home</a>
-  <div class="divider"> / </div>
-  <div class="section">OOPS!</div>
-</div>
+POMS
 {%endblock%}
 
 {%block header%}
@@ -25,7 +17,7 @@
 {%block content%}
 <div class="ui" id="oops">
   <div class="ui label">
-   <i class="huge frown icon"></i>   
+   <i class="huge frown icon"></i>
    Unknown Error
   </div>
   <div class="ui hidden divider"></div>
@@ -49,6 +41,5 @@
     </div>
     {% endif %}
     <div class="ui hidden divider"></div>
-</div> 
+</div>
 {%endblock%}
-
