--- a/webservice/templates/launch_template_edit.html
+++ b/webservice/templates/launch_template_edit.html
@@ -1,36 +1,25 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>POMS</title>
-
-    <style type="text/css">
-    div.scrollable {
-        width: 100%;
-        overflow-x: scroll;
-    }
-    div.scrollable table {
-        width: 300%;
-    }
-    </style>
+POMS
 {%endblock%}
 
-{%block breadcrumbs%}
-<div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="{{pomspath}}/" class="section">Home</a>
-  <div class="divider"> / </div>
-  <div class="section">Launch Templates</div>
-</div>
-{%endblock%}
-
-{%block header%}
+<style type="text/css">
+  div.scrollable {
+  width: 100%;
+  overflow-x: scroll;
+  }
+  div.scrollable table {
+  width: 300%;
+  }
+</style>
 
 {% macro show_hint(anchor, hint) %}
     {% include 'help_button.html' %}
 {% endmacro %}
 
-<h1 class="ui header">
-    Launch Templates {{ show_hint('', 'Help page') }}
-</h1>
+{%block header%}
+Launch Templates {{ show_hint('', 'Help page') }}
 {%endblock%}
 
 {%block subheader%}
