--- a/webservice/templates/list_task_logged_files.html
+++ b/webservice/templates/list_task_logged_files.html
@@ -1,20 +1,7 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>Submission {{jobsub_job_id}} Logged Files </title>
-{%endblock%}
-
-
-{%block breadcrumbs%}
-<div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="{{pomspath}}/" class="section">Home</a>
-  <div class="divider"> / </div>
-  <div class="section"> <a href="{{pomspath}}/show_campaigns">Campaign Stage</a></div>
-  <div class="divider"> / </div>
-  <div class="section"> <a href="{{pomspath}}/campaign_task_files?campaign_id={{campaign.campaign_id}}">Campaign Stage {{campaign.name}} File Info by Submission</a></div>
-  <div class="divider"> / </div>
-  <div class="section"> <a href="{{pomspath}}/show_campaigns">Submission {{jobsub_job_id}} Logged files</a></div>
-</div>	
+Submission {{jobsub_job_id}} Logged Files
 {%endblock%}
 
 
