--- a/webservice/templates/raw_tables.html
+++ b/webservice/templates/raw_tables.html
@@ -1,39 +1,16 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>POMS DB Admin</title>
+POMS DB Admin
 {%endblock%}
-
-{%block breadcrumbs%}
-<div class="ui breadcrumb" style="margin-top:-45px;">
-  <a href= "{{pomspath}}/" class="section">Home</a>
-  <div class="divider"> / </div>
-  <div class="section">Raw Tables</div>
-</div>
-{%endblock%}
-
-
-
-
 
 {%block header%}
-<h1 class="ui header">
-     DB Admin{%include 'help_button.html'%}
-    <div class="sub header">
-        update database tables directly
-    </div>
-</h1>
+DB Admin{%include 'help_button.html'%}
 {%endblock%}
-
-
-
 
 {%block subheader%}
-<h2 class="ui dividing header">Data Types:</h2>
+Raw Tables:
 {%endblock%}
-
-
-
 
 {%block content%}
 <ul>
