--- a/webservice/templates/search_tags.html
+++ b/webservice/templates/search_tags.html
@@ -1,27 +1,13 @@
 {%extends "layout.html" %}
 
 {%block title%}
-    <title>POMS Tag Query Results</title>
+POMS Tag Query Results
 {%endblock%}
-
-
-
-{%block breadcrumbs%}
-<div class="ui breadcrumb" style="margin-top:-45px;">
-  <a href="{{pomspath}}/" class="section">Home</a>
-  <div class="divider"> / </div>
-  <div class="section">Tag Query Results</div>
-</div>
-{%endblock%}
-
-
-
-
 
 {%block header%}
 <h1 class="ui header">
          Tag Query Results {%include 'help_button.html'%}
-                    
+
           <div class="sub header">
               view all campaign Layers belonging to this Tag/Campaign
           </div>
