--- a/webservice/templates/show_task_jobs.html
+++ b/webservice/templates/show_task_jobs.html
@@ -1,22 +1,8 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>POMS:Jobs in Submission {{taskid}} </title>
+POMS:Jobs in Submission {{taskid}}
 {%endblock%}
-
-
-{%block breadcrumbs%}
-<div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="{{pomspath}}/" class="section">Home</a>
-  <div class="divider"> / </div>
-  <a href="{{pomspath}}/show_campaigns/" class="section">Campaign Stages</a>
-  <div class="divider"> / </div>
-  <a href="{{pomspath}}/campaign_time_bars?campaign_id={{campaign_id}}" class="section">Campaign Stage {{cname}}</a>
-  <div class="divider"> / </div>
-  <div class="section">Jobs in submission {{taskid}}</div>
-</div>
-{%endblock%}
-
 
 {%block header%}
 <h1 class="ui header">
