Minor header change

--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -6,13 +6,11 @@ POMS:Campaign {{Campaign_info.Campaign.name}}
 
 
 {%block header%}
-<h1 class="ui header">
-     Campaigns{%include 'help_button.html'%}
-</h1>
+Campaigns{%include 'help_button.html'%}
 {%endblock%}
 
 {%block subheader%}
-<h2 class="ui dividing header">Campaign {{Campaign_info.Campaign.name}}</h2>
+Campaign {{Campaign_info.Campaign.name}}
 {%endblock%}
 
 
