--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -262,6 +262,9 @@ $( document ).ready(function() {
 	      </a>
               {% endif %}
 	      </div>
+	      <div class=item>
+                 <a href="{{kibana_link}}" _target='blank'>Kibana Info on Latest Task</a>
+	      </div>
           </div> <!-- class=menu -->
      </div>  <!-- class=ui segment raised -->
 
