--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -263,7 +263,8 @@ $( document ).ready(function() {
               {% endif %}
 	      </div>
 	      <div class=item>
-                 <a href="{{kibana_link}}" target='_blank'>Kibana Info on Latest Task</a>
+                 <i class="external icon"></i>
+                 <a href="{{kibana_link}}" target='_blank'>Kibana Usage Info for Campaign</a>
 	      </div>
           </div> <!-- class=menu -->
      </div>  <!-- class=ui segment raised -->
