--- a/webservice/templates/list_task_logged_files.html
+++ b/webservice/templates/list_task_logged_files.html
@@ -22,7 +22,7 @@ Input Files seen
 <ul>
 {%for file in fl%}
    {%if file.file_type == "input"%}
-     <li> {{file.file_name}}
+     <li> <a href="http://samweb.fnal.gov:8480/sam/{{session_experiment}}/api/files/name/{{file.file_name}}/metadata">{{file.file_name}}</a>
    {%endif%}
 {%endfor%}
 </ul>
@@ -31,7 +31,7 @@ Output Files seen
 <ul>
 {%for file in fl%}
    {%if file.file_type == "output"%}
-     <li> {{file.file_name}}
+     <li> <a href="http://samweb.fnal.gov:8480/sam/{{session_experiment}}/api/files/name/{{file.file_name}}/metadata">{{file.file_name}}</a>
    {%endif%}
 {%endfor%}
 </ul>
