--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -168,40 +168,34 @@ $( document ).ready(function() {
 
      </tr>
 
+     {%set column_heads = ['All','Idle','Running','Held','Total Completed','Completed', 'Located', 'Removed', 'efficiency', 'pending' ] %}
+
      {% for c in cl %}
      {% set outer_loop = loop %}
             <tr>
-            {% for k in counts_keys[c.campaign_id] %}
+            {% for k in column_heads %}
               {% if k == "efficiency" %}
                 <td>
-                  <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{c.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}&tdays={{tdays}}">
-                   {% if counts[c.campaign_id][k] >= 0 %}
-                    {{counts[c.campaign_id][k]}}
-                   {% else %}
-                    -
-                   {% endif %}
+                  <a href="{{pomspath}}/jobs_eff_histo?campaign_id={{c.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}&tdays={{tdays}}" id="data_{{c.campaign_id}}_{{k}}">
+                      ...
                   </a>
                 </td>
               {% elif k == "pending" %}
                 <td>
-                  <a href="{{pomspath}}/show_dimension_files?experiment={{c.experiment}}&dims={{dimlist[outer_loop.index0]}}">
-                   {% if counts[c.campaign_id][k] >= 0 %}
-                    {{counts[c.campaign_id][k]}}
-                   {% else %}
-                    -
-                   {% endif %}
+                  <a href="{{pomspath}}/actual_pending_files?campaign_id={{c.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}&tdays={{tdays}}" id="data_{{c.campaign_id}}_{{k}}">
+                     ...
                   </a>
                 </td>
               {% elif k == "All" %}
                 <td>
-                  <a href="{{pomspath}}/job_table?campaign_id={{c.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}&tdays={{tdays}}">
-                    {{counts[c.campaign_id][k]}}
+                  <a href="{{pomspath}}/job_table?campaign_id={{c.campaign_id}}&tmin={{tmins}}&tmax={{tmaxs}}&tdays={{tdays}}" id="data_{{c.campaign_id}}_{{k}}">
+                    ...
                   </a>
                 </td>
               {% elif k %}
                 <td>
-                  <a href="{{pomspath}}/job_table?campaign_id={{c.campaign_id}}&job_status={{k}}&tmin={{tmins}}&tmax={{tmaxs}}&tdays={{tdays}}">
-                    {{counts[c.campaign_id][k]}}
+                  <a href="{{pomspath}}/job_table?campaign_id={{c.campaign_id}}&job_status={{k}}&tmin={{tmins}}&tmax={{tmaxs}}&tdays={{tdays}}"  id="data_{{c.campaign_id}}_{{k}}">
+                     ...
                   </a>
                   {%if k == "Idle"%}
                     &nbsp; &nbsp;
@@ -379,6 +373,44 @@ fields:{
 //minCharacters : 3
 });
 
+</script>
+
+<script>
+$(function() {
+
+var now = new Date()
+var nows = now.getTime()
+nows = nows - (nows % 300000)
+nows = nows.toString()
+
+{% for c in cl %}
+$.getJSON("/poms/json_job_counts?tmin={{tmins}}&tmax={{tmaxs}}&campaign_id={{c.campaign_id}}&uuid="+nows,function(data){
+    for( var k in data ) {
+       id = "data_{{c.campaign_id}}_" + k.replace(" ","_")
+       console.log("trying to update a with id " + id )
+       $("a#"+id).html(data[k])
+    }
+})
+{% endfor %}
+$.getJSON("/poms/json_efficiency_for_campaigns?tmin={{tmins}}&tmax={{tmaxs}}&cl={%for c in cl%}{{c.campaign_id}},{%endfor%}&uuid="+nows, function(data){
+    for( var k in data ) {
+       id = "data_"+k+"_efficiency"
+       console.log("trying to update a with id " + id )
+       $("a#"+id).html(data[k])
+    }
+})
+$.getJSON("/poms/json_pending_for_campaigns?tmin={{tmins}}&tmax={{tmaxs}}&cl={%for c in cl%}{{c.campaign_id}},{%endfor%}&uuid="+nows, function(data){
+    for( var k in data ) {
+       id = "data_"+k+"_pending"
+       console.log("trying to update a with id " + id )
+       if (data[k] == -1) {
+           $("a#"+id).html('N/A')
+       } else {
+           $("a#"+id).html(data[k])
+       }
+    }
+})
+});
 </script>
 
 {%endblock%}
